--- a/pages/6349.html
+++ b/pages/6349.html
@@ -429,15 +429,15 @@ margin-left: 0em;
 <div class='num_remark'>
 <h6 id='remark'>Remark</h6>
 
-<p>So in particular for a globally hyperbolic spacetime <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> there is a <a class='existingWikiWord' href='/nlab/show/homeomorphism'>homeomorphism</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>×</mo><mi>Σ</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>
+<p>So in particular for a globally hyperbolic spacetime <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> there is a <a class='existingWikiWord' href='/nlab/show/homeomorphism'>homeomorphism</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>×</mo><mi>Σ</mi><mo>→</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>
   \phi\colon \mathbb{R} \times \Sigma \to X
 
 </annotation></semantics></math></div>
-<p>from the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> of the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> with a <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>dim</mi><mi>X</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(dim X - 1)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a> <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a> <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> and for each <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>t \in \mathbb{R}</annotation></semantics></math> the image <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>t</mi><mo>,</mo><mi>Σ</mi><mo stretchy='false'>)</mo><mo>⊂</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>\phi(t, \Sigma) \subset X</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surface</a> of <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
+<p>from the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>product</a> of the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> with a <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>dim</mi><mi>X</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(dim X - 1)</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a> <a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a> <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> and for each <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>t</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>t \in \mathbb{R}</annotation></semantics></math> the image <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>t</mi><mo>,</mo><mi>Σ</mi><mo stretchy='false'>)</mo><mo>⊂</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>\phi(t, \Sigma) \subset X</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/Cauchy+surface'>Cauchy surface</a> of <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.</p>
 </div>
 
-<p>A <em>time orientation</em> of a globally hyperbolic Lorentzian spacetime is a choice of <a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> of the factor <math class='maruku-mathml' display='inline' id='mathml_c3f5ab360b90bfa9217510867544a0cbccdb1ce5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> under the above homeomorphism.</p>
+<p>A <em>time orientation</em> of a globally hyperbolic Lorentzian spacetime is a choice of <a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a> of the factor <math class='maruku-mathml' display='inline' id='mathml_6fca57f29e0586bfc2f6f2a659467ce6588072f5_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> under the above homeomorphism.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -448,6 +448,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/initial+value+problem'>Cauchy problem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Green+hyperbolic+partial+differential+equation'>Green hyperbolic partial differential equation</a></p>
 </li>
 </ul>
 
@@ -495,14 +499,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  7, 2017 20:17:38 
-  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (218.215.34.216)
+  Revised on November  9, 2017 10:41:06 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (88.64.51.223)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/globally+hyperbolic+Lorentzian+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/globally+hyperbolic+Lorentzian+manifold/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/globally+hyperbolic+Lorentzian+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/globally+hyperbolic+Lorentzian+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/globally+hyperbolic+Lorentzian+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/globally+hyperbolic+Lorentzian+manifold/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/globally+hyperbolic+Lorentzian+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/globally+hyperbolic+Lorentzian+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
