--- a/pages/10229.html
+++ b/pages/10229.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -902,7 +902,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>meter</em> is a <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a>.</p>
+<p>The <em>meter</em> or <em>metre</em> (in European spelling) is a <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -927,6 +927,8 @@ margin-left: 0em;
 
 <p>
  
+ 
+ 
 </p>
 
 <p>
@@ -934,14 +936,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  9, 2017 03:10:30 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.64.51.223)
+  Revised on November  9, 2017 10:40:35 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (95.148.217.71)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/meter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/meter/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/meter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/meter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/meter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/meter/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/meter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/meter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
