--- a/pages/3784.html
+++ b/pages/3784.html
@@ -410,7 +410,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -594,13 +594,13 @@ margin-left: 0em;
 
 <p>A <em>spacetime</em> is a <a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a> that models <a class='existingWikiWord' href='/nlab/show/space'>space</a> and <a class='existingWikiWord' href='/nlab/show/time'>time</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>.</p>
 
-<p>This is formalized by saying that a <strong>spacetime</strong> is a <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>smooth Lorentzian space</a> <math class='maruku-mathml' display='inline' id='mathml_283c3bac063ba8eb0011b1db5b4d91efc575e856_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>μ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\mu)</annotation></semantics></math> equipped with a time orientation (see there).</p>
+<p>This is formalized by saying that a <strong>spacetime</strong> is a <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>smooth Lorentzian space</a> <math class='maruku-mathml' display='inline' id='mathml_9dd5f3c93942d68d7604db7f1fe6615671564f3f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>μ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\mu)</annotation></semantics></math> equipped with a <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>time orientation</a> (see there).</p>
 
 <p>Hence a point in a spacetime is called an <em><a class='existingWikiWord' href='/nlab/show/event'>event</a></em>.</p>
 
 <p>In the context of classical <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> a <strong>spacetime</strong> is usually in addition assumed to be connected and four-dimensional. A connected Lorentzian manifold is either time orientable or it has a two-sheeted covering which is time orientable.</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/classical+physics'>classical physics</a>, notably in <a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a> and <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> points in <math class='maruku-mathml' display='inline' id='mathml_283c3bac063ba8eb0011b1db5b4d91efc575e856_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> model coordinates where <em>events</em> can take place from the viewpoint of an observer (“points in space and time”) while the metric <math class='maruku-mathml' display='inline' id='mathml_283c3bac063ba8eb0011b1db5b4d91efc575e856_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> models the field of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> in <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/classical+physics'>classical physics</a>, notably in <a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a> and <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> points in <math class='maruku-mathml' display='inline' id='mathml_9dd5f3c93942d68d7604db7f1fe6615671564f3f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> model coordinates where <em>events</em> can take place from the viewpoint of an observer (“points in space and time”) while the metric <math class='maruku-mathml' display='inline' id='mathml_9dd5f3c93942d68d7604db7f1fe6615671564f3f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi></mrow><annotation encoding='application/x-tex'>\mu</annotation></semantics></math> models the field of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> in <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>.</p>
 
 <h3 id='intermingling_of_space_and_time'>Intermingling of space and time</h3>
 
@@ -731,14 +731,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 27, 2017 09:33:22 
+  Revised on November  9, 2017 10:53:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  (88.64.51.223)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spacetime/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spacetime/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
