--- a/pages/18766.html
+++ b/pages/18766.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -471,7 +471,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(0,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory'><math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(0,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%280%2C1%29-category+theory'>(0,1)-category theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/logic'>logic</a>, <a class='existingWikiWord' href='/nlab/show/order+theory'>order theory</a></p>
@@ -591,28 +591,28 @@ margin-left: 0em;
 <p>A <strong>MILL hyperdoctrine</strong> is a closed indexed monoidal poset with <span class='newWikiWord'>indexed products<a href='/nlab/new/indexed+products'>?</a></span> and indexed coproducts satisfying the <a class='existingWikiWord' href='/nlab/show/Beck-Chevalley+condition'>Beck-Chevalley condition</a> and the <a class='existingWikiWord' href='/nlab/show/Frobenius+reciprocity'>Frobenius reciprocity</a> condition.</p>
 </div>
 
-<p>A MILL hyperdoctrine models predicate intuitionistic linear logic, with <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>,</mo><mstyle mathvariant='bold'><mn>1</mn></mstyle><mo>,</mo><mo>⊸</mo><mo>,</mo><mo>∃</mo><mo>,</mo><mo>∀</mo></mrow><annotation encoding='application/x-tex'>\otimes,\mathbf{1},\multimap,\exists,\forall</annotation></semantics></math>.</p>
+<p>A MILL hyperdoctrine models predicate intuitionistic linear logic, with <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>,</mo><mstyle mathvariant='bold'><mn>1</mn></mstyle><mo>,</mo><mo>⊸</mo><mo>,</mo><mo>∃</mo><mo>,</mo><mo>∀</mo></mrow><annotation encoding='application/x-tex'>\otimes,\mathbf{1},\multimap,\exists,\forall</annotation></semantics></math>.</p>
 
 <div class='un_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <strong>MALL hyperdoctrine</strong> is a MILL hyperdoctrine whose fibers are <a class='existingWikiWord' href='/nlab/show/star-autonomous+category'>$\ast$-autonomous</a> <a class='existingWikiWord' href='/nlab/show/lattice'>lattices</a> and whose reindexing functors preserve all the <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math>-autonomous and lattice structure.</p>
+<p>A <strong>MALL hyperdoctrine</strong> is a MILL hyperdoctrine whose fibers are <a class='existingWikiWord' href='/nlab/show/star-autonomous+category'>*-autonomous</a> <a class='existingWikiWord' href='/nlab/show/lattice'>lattices</a> and whose reindexing functors preserve all the <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math>-autonomous and lattice structure.</p>
 </div>
 
-<p>A MALL hyperdoctrine models predicate classical linear logic without exponentials, with <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>,</mo><mstyle mathvariant='bold'><mn>1</mn></mstyle><mo>,</mo><mo>⅋</mo><mo>,</mo><mo>⊥</mo><mo>,</mo><mi>&amp;</mi><mo>,</mo><mo>⊤</mo><mo>,</mo><mo>⊕</mo><mo>,</mo><mstyle mathvariant='bold'><mn>0</mn></mstyle><mo>,</mo><mo>∃</mo><mo>,</mo><mo>∀</mo></mrow><annotation encoding='application/x-tex'>\otimes,\mathbf{1},\parr,\bot,\&amp;,\top,\oplus,\mathbf{0},\exists,\forall</annotation></semantics></math>.</p>
+<p>A MALL hyperdoctrine models predicate classical linear logic without exponentials, with <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>,</mo><mstyle mathvariant='bold'><mn>1</mn></mstyle><mo>,</mo><mo>⅋</mo><mo>,</mo><mo>⊥</mo><mo>,</mo><mi>&amp;</mi><mo>,</mo><mo>⊤</mo><mo>,</mo><mo>⊕</mo><mo>,</mo><mstyle mathvariant='bold'><mn>0</mn></mstyle><mo>,</mo><mo>∃</mo><mo>,</mo><mo>∀</mo></mrow><annotation encoding='application/x-tex'>\otimes,\mathbf{1},\parr,\bot,\&amp;,\top,\oplus,\mathbf{0},\exists,\forall</annotation></semantics></math>.</p>
 
 <div class='un_defn'>
 <h6 id='definition_3'>Definition</h6>
 
-<p>A <strong>linear-nonlinear hyperdoctrine</strong> is a MALL hyperdoctrine <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math> together with a <a class='existingWikiWord' href='/nlab/show/first-order+hyperdoctrine'>first-order hyperdoctrine</a> <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> and a fiberwise <a class='existingWikiWord' href='/nlab/show/monoidal+adjunction'>monoidal adjunction</a> <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>M</mi><mo>⇄</mo><mi>L</mi><mo>:</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>F : M \rightleftarrows L : G</annotation></semantics></math>.</p>
+<p>A <strong>linear-nonlinear hyperdoctrine</strong> is a MALL hyperdoctrine <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math> together with a <a class='existingWikiWord' href='/nlab/show/first-order+hyperdoctrine'>first-order hyperdoctrine</a> <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> and a fiberwise <a class='existingWikiWord' href='/nlab/show/monoidal+adjunction'>monoidal adjunction</a> <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>M</mi><mo>⇄</mo><mi>L</mi><mo>:</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>F : M \rightleftarrows L : G</annotation></semantics></math>.</p>
 </div>
 
-<p>A linear-nonlinear hyperdoctrine models full predicate classical linear logic, with the <a class='existingWikiWord' href='/nlab/show/%21-modality'>!-modality</a> modeled as the comonad <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mi>G</mi></mrow><annotation encoding='application/x-tex'>F G</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>?</mo></mrow><annotation encoding='application/x-tex'>?</annotation></semantics></math> as its de Morgan dual.</p>
+<p>A linear-nonlinear hyperdoctrine models full predicate classical linear logic, with the <a class='existingWikiWord' href='/nlab/show/%21-modality'>!-modality</a> modeled as the comonad <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mi>G</mi></mrow><annotation encoding='application/x-tex'>F G</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>?</mo></mrow><annotation encoding='application/x-tex'>?</annotation></semantics></math> as its de Morgan dual.</p>
 
 <h2 id='references'>References</h2>
 
 <ul id='Seely89'>
-<li><a class='existingWikiWord' href='/nlab/show/Robert+Seely'>R. A. G. Seely</a>, <em>Linear logic, <math class='maruku-mathml' display='inline' id='mathml_71806f957fa3ecfb50fb2cfaa515acb0cc090a4d_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math>-autonomous categories and cofree coalgebras</em>, <em>Contemporary Mathematics</em> 92, 1989. (<a class='existingWikiWord' href='/nlab/files/SeelyLinearLogic.pdf' title='pdf'>pdf</a>, <a href='http://www.math.mcgill.ca/rags/nets/llsac.ps.gz'>ps.gz</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Robert+Seely'>R. A. G. Seely</a>, <em>Linear logic, <math class='maruku-mathml' display='inline' id='mathml_db3494a32f0df1b295f84fab8798f016a8893688_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>*</mo></mrow><annotation encoding='application/x-tex'>\ast</annotation></semantics></math>-autonomous categories and cofree coalgebras</em>, <em>Contemporary Mathematics</em> 92, 1989. (<a class='existingWikiWord' href='/nlab/files/SeelyLinearLogic.pdf' title='pdf'>pdf</a>, <a href='http://www.math.mcgill.ca/rags/nets/llsac.ps.gz'>ps.gz</a>)</li>
 </ul>
 
 <p>
@@ -620,14 +620,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 10, 2017 02:07:06 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (76.167.222.204)
+  Revised on November 10, 2017 09:01:44 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/linear+hyperdoctrine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/linear+hyperdoctrine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/linear+hyperdoctrine/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/linear+hyperdoctrine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/linear+hyperdoctrine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
