--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,43 +308,33 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_73ac7c9bfab5f1c3e566eb33e96f2de5594c643f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mi>δ</mi><mstyle mathvariant='bold'><mi>L</mi></mstyle></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>=</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mi>d</mi><msub><mi>Θ</mi> <mi>BFV</mi></msub></mtd> <mtd></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↙</mo></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↘</mo></mtd></mtr> <mtr><mtd><mrow><mtable><mtr><mtd><mtext>classical</mtext></mtd></mtr> <mtr><mtd><mtext>field theory</mtext></mtd></mtr></mtable></mrow></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mrow><mtable><mtr><mtd><mtext>deformation to</mtext></mtd></mtr> <mtr><mtd><mtext>quantum</mtext></mtd></mtr> <mtr><mtd><mtext>field theory</mtext></mtd></mtr></mtable></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \array{
-     &amp;&amp;&amp; \delta \mathbf{L}
-     \\
-     &amp;&amp;&amp; =
-     \\
-     &amp;  &amp; \delta_{EL}\mathbf{L} &amp;- &amp; d \Theta_{BFV}   &amp; 
-     \\
-     &amp; \swarrow &amp;&amp; &amp;&amp; \searrow
-     \\
-     \array{
-       \text{classical}
-       \\
-       \text{field theory}
-     }
-     &amp;&amp; &amp;&amp; &amp;&amp;
-     \array{
-       \text{deformation to}
-       \\
-       \text{quantum}
-       \\
-       \text{field theory}
-     }
-  }
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e8d54986bc78b770c31163aa4e477935a3025e56_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>ι</mi> <mrow><mo stretchy='false'>[</mo><msub><mi>v</mi> <mn>1</mn></msub><mo stretchy='false'>]</mo></mrow></msub></mtd> <mtd><mo>=</mo><mrow><mo>[</mo><msubsup><mi>ℒ</mi> <mrow><msub><mi>v</mi> <mn>1</mn></msub></mrow> <mi>var</mi></msubsup><mo>,</mo><msub><mi>ι</mi> <mrow><msub><mi>v</mi> <mn>2</mn></msub></mrow></msub><mo>]</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>≔</mo><msubsup><mi>ℒ</mi> <mrow><msub><mi>v</mi> <mn>1</mn></msub></mrow> <mi>var</mi></msubsup><mo>∘</mo><msub><mi>ι</mi> <mrow><msub><mi>v</mi> <mn>2</mn></msub></mrow></msub><mo>−</mo><msub><mi>ι</mi> <mrow><msub><mi>v</mi> <mn>2</mn></msub></mrow></msub><mo>∘</mo><msubsup><mi>ℒ</mi> <mrow><msub><mi>v</mi> <mn>1</mn></msub></mrow> <mi>var</mi></msubsup></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \iota_{[v_1]}
+     &amp; =
+    \left[
+      \mathcal{L}^{var}_{v_1}, \iota_{v_2}
+    \right]
+    \\
+    &amp; \coloneqq
+    \mathcal{L}^{var}_{v_1} \circ \iota_{v_2}
+    -
+    \iota_{v_2} \circ \mathcal{L}^{var}_{v_1}
+  \end{aligned}
+  \,,
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 10, 2017 09:13:57 
+  Revised on November 10, 2017 13:59:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1232" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1232 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1233" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1233 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
