--- a/pages/16017.html
+++ b/pages/16017.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -353,7 +353,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_b46af950bd3f18125b9ab3b32f67e32e1c1df5fe_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_b46af950bd3f18125b9ab3b32f67e32e1c1df5fe_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_ef2e57d92ab523e3ec06a7d444a9acebb00c34e2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_ef2e57d92ab523e3ec06a7d444a9acebb00c34e2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -361,7 +361,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#References'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In the context of <a class='existingWikiWord' href='/nlab/show/modal+logic'>modal logic</a>, by <em>possible world semantics</em> one means the interpretation of the <a class='existingWikiWord' href='/nlab/show/necessity+and+possibility'>possibility</a> and <a class='existingWikiWord' href='/nlab/show/necessity+and+possibility'>necessity</a> <a class='existingWikiWord' href='/nlab/show/modality'>modalities</a> as <a class='existingWikiWord' href='/nlab/show/existential+quantifier'>existential quantification</a> and <a class='existingWikiWord' href='/nlab/show/universal+quantifier'>universal quantification</a> over a <a class='existingWikiWord' href='/nlab/show/context'>context</a> of “possible worlds”. Such a model is sometimes referred to as a <a class='existingWikiWord' href='/nlab/show/Kripke+frame'>Kripke frame</a>.</p>
@@ -382,7 +382,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='references'>References</h2>
+<h2 id='References'>References</h2>
 
 <ul>
 <li>
@@ -403,14 +403,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 17, 2015 16:25:32 
+  Revised on November 11, 2017 05:52:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  (88.64.51.223)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/possible+worlds+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/possible+worlds+semantics/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/possible+worlds+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/possible+worlds+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/possible+worlds+semantics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/possible+worlds+semantics/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/possible+worlds+semantics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/possible+worlds+semantics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
