--- a/pages/18768.html
+++ b/pages/18768.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -513,9 +513,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/shape+modality'>shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(ʃ \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror><mo>⊣</mo><mo>♭</mo><mo>⊣</mo><mo>♯</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(ʃ \dashv \flat \dashv \sharp )</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -533,9 +533,9 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/dR-shape+modality'>dR-shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/dR-flat+modality'>dR-flat modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><merror><mtext>Unknown character</mtext></merror><msub><merror><mtext>Unknown character</mtext></merror> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>ʃ_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><merror><mtext>Unknown character</mtext></merror><msub><merror><mtext>Unknown character</mtext></merror> <mi>dR</mi></msub><mo>⊣</mo><msub><mo>♭</mo> <mi>dR</mi></msub></mrow><annotation encoding='application/x-tex'>ʃ_{dR} \dashv \flat_{dR}</annotation></semantics></math></p>
 </li>
 </ul>
 
@@ -549,9 +549,9 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
+<p>(<a class='existingWikiWord' href='/nlab/show/reduction+modality'>reduction modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+shape+modality'>infinitesimal shape modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/infinitesimal+flat+modality'>infinitesimal flat modality</a>)</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>ℜ</mi><mo>⊣</mo><mi>ℑ</mi><mo>⊣</mo><mi>&amp;</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\Re \dashv \Im \dashv \&amp;)</annotation></semantics></math></p>
 
 <ul>
 <li>
@@ -573,12 +573,12 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/bosonic+modality'>fermionic modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/bosonic+modality'>bosonic modality</a> <math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mo>⇉</mo><mo>⊣</mo><mo>⇝</mo><mo>⊣</mo><mi>Rh</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\rightrightarrows \dashv \rightsquigarrow \dashv Rh)</annotation></semantics></math></p>
 </li>
 </ul>
-<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='Diagram'><math class='maruku-mathml' display='block' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mi>id</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>id</mi></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>fermionic</mi></mover></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>bosonic</mi></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>Rh</mi></mtd> <mtd><mover><mrow></mrow><mi>rheonomic</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>reduced</mi></mover></mtd> <mtd><mi>ℜ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>infinitesimal</mi></mover></mtd> <mtd><mi>ℑ</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mi>&amp;</mi></mtd> <mtd><mover><mrow></mrow><mtext>étale</mtext></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>cohesive</mi></mover></mtd> <mtd><merror><mtext>Unknown character</mtext></merror><merror><mtext>Unknown character</mtext></merror></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♭</mo></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd> <mtd></mtd> <mtd><mo>⊥</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mover><mrow></mrow><mi>discrete</mi></mover></mtd> <mtd><mo>♭</mo></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>♯</mo></mtd> <mtd><mover><mrow></mrow><mi>continuous</mi></mover></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd> <mtd></mtd> <mtd><mo>∨</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>∅</mi></mtd> <mtd><mo>⊣</mo></mtd> <mtd><mo>*</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp;&amp; id &amp;\dashv&amp; id 
     \\
@@ -620,7 +620,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+algebra'>smooth algebra</a> (<math class='maruku-mathml' display='inline' id='mathml_35fe2e684152d03e792a40f9bf3e883458080af4_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>C^\infty</annotation></semantics></math>-ring)</p>
+<p><a class='existingWikiWord' href='/nlab/show/smooth+algebra'>smooth algebra</a> (<math class='maruku-mathml' display='inline' id='mathml_e7fe84de61393bd3aff027349bdfe2cf31ed191c_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mn>∞</mn></msup></mrow><annotation encoding='application/x-tex'>C^\infty</annotation></semantics></math>-ring)</p>
 </li>
 
 <li>
@@ -781,7 +781,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The concept of <em>conal manifold</em> (<a href='#Khavkine12'>Khavkine 12</a>) is a generalizatioon of the concept of a <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>time oriented</a> <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>Lorentzian manifold</a> to the case where a <a class='existingWikiWord' href='/nlab/show/differential+operator'>differential operator</a> on some <a class='existingWikiWord' href='/nlab/show/vector+bundle'>vector bundle</a> over the manifold induces its own adapted analogs of <a class='existingWikiWord' href='/nlab/show/future+cone'>future cones</a> and <a class='existingWikiWord' href='/nlab/show/future+cone'>past cones</a> at each point.</p>
+<p>The concept of <em>conal manifold</em> (<a href='#Khavkine12'>Khavkine 12</a>) is a generalization of the concept of a <a class='existingWikiWord' href='/nlab/show/globally+hyperbolic+Lorentzian+manifold'>time oriented</a> <a class='existingWikiWord' href='/nlab/show/smooth+Lorentzian+space'>Lorentzian manifold</a> to the case where a <a class='existingWikiWord' href='/nlab/show/differential+operator'>differential operator</a> on some <a class='existingWikiWord' href='/nlab/show/vector+bundle'>vector bundle</a> over the manifold induces its own adapted analogs of <a class='existingWikiWord' href='/nlab/show/future+cone'>future cones</a> and <a class='existingWikiWord' href='/nlab/show/future+cone'>past cones</a> at each point.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -804,14 +804,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 10, 2017 16:42:32 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on November 11, 2017 11:03:10 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (209.93.199.52)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conal+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/conal+manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conal+manifold/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/conal+manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conal+manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
