--- a/pages/6088.html
+++ b/pages/6088.html
@@ -564,6 +564,8 @@ margin-left: 0em;
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction of a vector</a></li>
 </ul>
 
 <p>
@@ -571,14 +573,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  6, 2017 05:58:48 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  Revised on November 12, 2017 04:13:47 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (209.93.199.52)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/vector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vector/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/vector" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vector" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/vector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vector/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/vector" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vector" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
