--- a/pages/6088.html
+++ b/pages/6088.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='higher_linear_algebra'>Higher linear algebra</h4>
+<h4 id='linear_algebra'>Linear algebra</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></strong></p>
@@ -560,6 +560,8 @@ margin-left: 0em;
 
 <p>A <strong>vector</strong> is an element in a <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a>.</p>
 
+<p>The archetypical examples are <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent vectors</a>.</p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -573,14 +575,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 12, 2017 04:13:47 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (209.93.199.52)
+  Revised on November 12, 2017 09:26:38 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.55.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/vector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vector/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/vector" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vector" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/vector" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/vector/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/vector" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/vector" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
