--- a/pages/9593.html
+++ b/pages/9593.html
@@ -315,7 +315,13 @@ margin-left: 0em;
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a>, <a class='existingWikiWord' href='/nlab/show/tempered+distribution'>tempered distribution</a>, <a class='existingWikiWord' href='/nlab/show/compactly+supported+distribution'>compactly supported distribution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -325,14 +331,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on April 10, 2013 22:32:56 
+  Revised on November 12, 2017 09:55:39 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.174.41.18)
+  (94.220.55.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Laurent+Schwartz" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Laurent+Schwartz" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Laurent+Schwartz/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Laurent+Schwartz" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Laurent+Schwartz" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
