--- a/pages/18772.html
+++ b/pages/18772.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Richard Feynman in nLab
+      Hörmander&#39;s condition in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Richard Feynman
+      Hörmander&#39;s condition
   </h1>
 
 
@@ -308,49 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li><a href='http://en.wikipedia.org/wiki/Richard_Feynman'>wikipedia</a></li>
-</ul>
+    <blockquote>
+<p>This entry is about Hörmander’s condition on <a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent vector fields</a>. This is different from <a class='existingWikiWord' href='/nlab/show/H%C3%B6rmander%27s+criterion'>Hörmander&#39;s criterion</a> on <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front sets</a>.</p>
+</blockquote>
 
-<h1 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_8283853b3aa20c48c03ff476579da684f02f3338_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h1>
+<h2 id='references'>References</h2>
+
+<p>See also</p>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Schwinger-Tomonaga-Feynman-Dyson'>Schwinger-Tomonaga-Feynman-Dyson</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a></p>
-</li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/H%C3%B6rmander%27s_condition'>Hörmander’s condition</a></em></li>
 </ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 12, 2017 11:43:00 
+  Created on November 12, 2017 11:17:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.55.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Richard+Feynman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Feynman/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Richard+Feynman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Feynman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/H%C3%B6rmander%27s+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Richard+Feynman" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/H%C3%B6rmander%27s+condition" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Richard+Feynman" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/H%C3%B6rmander%27s+condition" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Richard+Feynman" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/H%C3%B6rmander%27s+condition" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
