--- a/pages/18594.html
+++ b/pages/18594.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,7 +312,7 @@ margin-left: 0em;
 <li><a href='https://en.wikipedia.org/wiki/Shin%27ichir%C5%8D_Tomonaga'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_0ab6d3e04e681315303c5be544e69ac3046250eb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_0b76801d3efff348483fc4da69d62d1684261422_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -321,6 +321,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Tomonaga-Schwinger+equation'>Tomonaga-Schwinger equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwinger-Tomonaga-Feynman-Dyson'>Schwinger-Tomonaga-Feynman-Dyson</a></p>
 </li>
 </ul>
 
@@ -331,14 +335,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September  8, 2017 05:28:58 
+  Revised on November 12, 2017 11:42:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (94.220.55.151)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Shin%27ichir%C5%8D+Tomonaga" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Shin%27ichir%C5%8D+Tomonaga" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Shin%27ichir%C5%8D+Tomonaga/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Shin%27ichir%C5%8D+Tomonaga" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Shin%27ichir%C5%8D+Tomonaga" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
